service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp-service
spec:
  selector:
    app: smtp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
