route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: smtp-route
spec:
  to:
    kind: Service
    name: smtp-service
  port:
    targetPort: 5000
  tls:
    termination: edge
  insecureEdgeTerminationPolicy: Redirect
